# simple-echo-bot

./: .env.prod  README.md  flake.nix  pyproject.toml
src/: bot.py
src/plugins/: echo.py
